Twenty Fourteen: make sure we only hide post content on small screens for default post types: post and page. Fixes #27031. Built from https://develop.svn.wordpress.org/trunk@27587
git-svn-id: http://core.svn.wordpress.org/trunk@27430 1a063a9b-81f0-0310-95a4-ce76da25c4cd

--- a/wp-content/themes/twentyfourteen/style.css
+++ b/wp-content/themes/twentyfourteen/style.css
@@ -2995,8 +2995,10 @@ a.post-thumbnail:hover {
 	}
 
 	.list-view .site-content .cat-links,
-	.list-view .site-content .entry-content,
-	.list-view .site-content .entry-summary,
+	.list-view .site-content .type-post .entry-content,
+	.list-view .site-content .type-page .entry-content,
+	.list-view .site-content .type-post .entry-summary,
+	.list-view .site-content .type-page .entry-summary,
 	.list-view .site-content footer.entry-meta {
 		display: none;
 	}
